--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,11 +27,11 @@ jobs:
           go-version: '1.17.x'
       - run: go vet
   
-  test:
+  test-memory:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
-      - run: go test ./...
+      - run: make test
