--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -46,4 +48,4 @@ jobs:
           go-version: '1.17.x'
       - run: make test
         env:
-          POSTGRES_URI: postgres://postgres:password@postgres:5432/postgres
+          POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
