--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,11 +27,25 @@ jobs:
           go-version: '1.17.x'
       - run: go vet
   
-  test-memory:
+  test:
     runs-on: ubuntu-18.04
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
       - run: make test
+        env:
+          POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
