--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.8'
+version: "3"
 services:
   postgres:
     image: postgres:14.1
     ports:
-      - 5432:5432
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -11,4 +11,32 @@ services:
   redis:
     image: redis:6.2
     ports:
-      - 6379:6379
+      - "6379:6379"
+
+  otel-collector:
+    image: otel/opentelemetry-collector:latest
+    command: ["--config=/etc/otel-local-config.yml"]
+    ports:
+      - "1888:1888"    # pprof extension
+      - "8888:8888"    # Prometheus metrics exposed by the collector
+      - "8889:8889"    # Prometheus exporter metrics
+      - "13133:13133"  # health_check extension
+      - "55679:55679"  # zpages extension
+      - "4317:4317"
+    volumes:
+      - "${PWD}/otel-config.yml:/etc/otel-local-config.yml"
+    depends_on:
+      - zipkin
+      - jaeger
+  
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "16686:16686"
