--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,8 +30,20 @@ jobs:
   test:
     runs-on: ubuntu-18.04
     services:
+      mongodb:
+        image: mongo:4.4.11
+        env:
+          MONGO_INITDB_ROOT_USERNAME: mongodb
+          MONGO_INITDB_ROOT_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 27017:27017
       postgres:
-        image: postgres
+        image: postgres:14.1
         env:
           POSTGRES_PASSWORD: password
         options: >-
@@ -42,7 +54,7 @@ jobs:
         ports:
           - 5432:5432
       redis:
-        image: redis
+        image: redis:6.2
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
