--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           MONGO_INITDB_ROOT_USERNAME: mongodb
           MONGO_INITDB_ROOT_PASSWORD: password
         options: >-
-          --health-cmd pg_isready
+          --health-cmd mongo
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
