--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,6 +67,6 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
-      - run: create-all-local-tables && make test
+      - run: make create-all-local-tables && make test
         env:
           POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
