--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,15 @@ jobs:
   test:
     runs-on: ubuntu-18.04
     services:
+      dynamodb:
+        image: amazon/dynamodb-local
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 8000:8000
       mongodb:
         image: mongo:4.4.11
         env:
