--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,6 +71,9 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: us-west-2
       - run: make create-all-local-tables && make test
         env:
           POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
