--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   fmt:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -19,7 +19,7 @@ jobs:
       - run: gofmt -l
 
   vet:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -27,9 +27,21 @@ jobs:
           go-version: '1.17.x'
       - run: go vet
   
+  validate-swagger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: char0n/swagger-editor-validate@v1
+        with:
+          definition-file: protos/api/v1/service.swagger.json
+
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     services:
+      dynamodb:
+        image: amazon/dynamodb-local
+        ports:
+          - 8000:8000
       mongodb:
         image: mongo:4.4.11
         env:
@@ -67,6 +79,11 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
-      - run: make test
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
+      - run: make create-all-local-tables && make test
         env:
           POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
