--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
+      - uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
+      - run: make build-protos
       - run: go vet
   
   validate-swagger:
@@ -79,6 +83,9 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
+      - uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
