--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,8 +81,7 @@ jobs:
           go-version: '1.17.x'
       - name: Install protoc-gen-go
         run: |
-          go get github.com/golang/protobuf/protoc-gen-go
-          go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
