Create tables in tests (#36)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,6 +101,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
-      - run: make create-all-local-tables && make test
+      - run: make test
         env:
           POSTGRES_URI: postgres://postgres:password@localhost:5432/postgres
