--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -13,8 +13,6 @@
     out: gen/proto
     opt:
       - paths=source_relative
-      - allow_repeated_fields_in_body=true
+      - logtostderr=true
   - name: openapiv2
-    out: gen/proto
-    opt:
-      - allow_repeated_fields_in_body=true
+    out: docs/
