--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,6 +94,7 @@ jobs:
           go-version: '1.17.x'
       - name: Install buf
         uses: bufbuild/buf-setup-action@v0.5.0
+      - uses: arduino/setup-protoc@v1
       - name: Install protoc-gen-go
         run: |
           go install google.golang.org/protobuf/cmd/protoc-gen-go
