--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,18 +1,18 @@
  version: v1
  plugins:
-  - name: go
+  - remote: buf.build/protocolbuffers/plugins/go:v1.27.1-1
     out: gen/proto
     opt:
       - paths=source_relative
-  - name: go-grpc
+  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
     out: gen/proto
     opt:
       - paths=source_relative
       - require_unimplemented_servers=false
-  - name: grpc-gateway
+  - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway:v2.8.0-1
     out: gen/proto
     opt:
       - paths=source_relative
       - logtostderr=true
-  - name: openapiv2
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.8.0-1
     out: docs/
