--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -14,5 +14,10 @@
     opt:
       - paths=source_relative
       - logtostderr=true
+  - remote: buf.build/jirkad/plugins/protoc-gen-validate:v0.6.1
+    out: gen/proto
+    opt:
+      - paths=source_relative
+      - lang=go
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.8.0-1
     out: docs/
