--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,14 +25,6 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
-      - name: Install protoc
-        uses: arduino/setup-protoc@v1
-      - name: Install protoc-gen-go
-        run: |
-          go install google.golang.org/protobuf/cmd/protoc-gen-go
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
-          go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway
-          go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2
       - run: make build-protos
       - run: go vet
   
@@ -42,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: char0n/swagger-editor-validate@v1
         with:
-          definition-file: protos/api/v1/service.swagger.json
+          definition-file: docs/api/v1/service.swagger.json
 
   test:
     runs-on: ubuntu-latest
@@ -92,14 +84,6 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17.x'
-      - name: Install protoc
-        uses: arduino/setup-protoc@v1
-      - name: Install protoc-gen-go
-        run: |
-          go install google.golang.org/protobuf/cmd/protoc-gen-go
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
-          go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway
-          go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
