--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,23 +1,13 @@
  version: v1
  plugins:
-  - remote: buf.build/protocolbuffers/plugins/go:v1.27.1-1
-    out: gen/proto
-    opt:
-      - paths=source_relative
-  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
-    out: gen/proto
-    opt:
-      - paths=source_relative
-      - require_unimplemented_servers=false
-  - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway:v2.8.0-1
-    out: gen/proto
-    opt:
-      - paths=source_relative
-      - logtostderr=true
+  - remote: buf.build/protocolbuffers/plugins/go
+    out: internal/gen
+    opt: paths=source_relative
+  - remote: buf.build/bufbuild/plugins/connect-go
+    out: internal/gen
+    opt: paths=source_relative
   - remote: buf.build/jirkad/plugins/protoc-gen-validate:v0.6.1
-    out: gen/proto
+    out: internal/gen
     opt:
       - paths=source_relative
       - lang=go
-  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.8.0-1
-    out: docs/
