--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,16 +11,14 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: './go.mod'
-      - id: go-cache-paths
-        run: |
-          echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/cache@v3
         with:
           path: |
-            ${{ steps.go-cache-paths.output.go-build }}
-            ${{ steps.go-cache-paths.output.go-mod }}
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - run: gofmt -l
 
   vet:
@@ -30,16 +28,14 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: './go.mod'
-      - id: go-cache-paths
-        run: |
-          echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/cache@v3
         with:
           path: |
-            ${{ steps.go-cache-paths.output.go-build }}
-            ${{ steps.go-cache-paths.output.go-mod }}
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - run: make build-protos
       - run: go vet
 
@@ -91,16 +87,14 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version-file: './go.mod'
-      - id: go-cache-paths
-        run: |
-          echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/cache@v3
         with:
           path: |
-            ${{ steps.go-cache-paths.output.go-build }}
-            ${{ steps.go-cache-paths.output.go-mod }}
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
