--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,4 +1,11 @@
  version: v1
+ managed:
+  enabled: true
+  go_package_prefix:
+    default: github.com/craigpastro/crudapp/internal/gen
+    except:
+      - buf.build/googleapis/googleapis
+      - buf.build/envoyproxy/protoc-gen-validate
  plugins:
   - remote: buf.build/protocolbuffers/plugins/go
     out: internal/gen
