--- a/internal/instrumentation/otel-config.yaml
+++ b/internal/instrumentation/otel-config.yaml
@@ -21,4 +21,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [jaeger, zipkin]
+      exporters: [jaeger]
