--- a/internal/instrumentation/otel-config.yaml
+++ b/internal/instrumentation/otel-config.yaml
@@ -10,9 +10,6 @@ exporters:
   jaeger:
     endpoint: "jaeger:14250"
     insecure: true
-  zipkin:
-    endpoint: "http://zipkin:9411/api/v2/spans"
-    insecure: true
 
 extensions:
   health_check:
@@ -24,4 +21,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [jaeger, zipkin]
+      exporters: [jaeger]
