--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,9 +1,9 @@
 version: 2
 sql:
   - engine: "postgresql"
-    schema: "cmd/migrate/migrations/001_create_schema.sql"
+    schema: "internal/storage/postgres/migrations/001_create_schema.sql"
     queries: "query.sql"
     gen:
       go:
-        package: "db"
-        out: "internal/gen/db"
+        package: "sqlc"
+        out: "internal/gen/sqlc"
