--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "./go.mod"
+      - uses: bufbuild/buf-setup-action@v1
       - name: buf lint
         uses: bufbuild/buf-lint-action@v1
       - name: golangci-lint
