--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,36 @@
 version: "3"
 services:
+  todoapp:
+    container_name: todoapp
+    build:
+      context: .
+    ports:
+      - 8080:8080
+    environment:
+      - POSTGRES_CONN_STRING=postgres://authenticator:password@postgres:5432/postgres
+      - POSTGRES_AUTOMIGRATE=true
+      - POSTGRES_MIGRATE_CONN_STRING=postgres://postgres:password@postgres:5432/postgres
+    depends_on:
+      - postgres
+
   postgres:
     image: postgres:latest
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   jaeger:
     image: jaegertracing/all-in-one:latest
     container_name: jaeger
     ports:
-      - "4317:4317"
-      - "16686:16686"
+      - 4317:4317
+      - 16686:16686
     environment:
       - COLLECTOR_OTLP_ENABLED=true
